--- a/secret/index.html
+++ b/secret/index.html
@@ -34,10 +34,18 @@
                 <button type="submit" class="btn start">Start splashin'</button>
             </form>
         </div>
-        <script src="js/vendor/modernizr-3.5.0.min.js"></script>
+        <div id="list-root">
+            <div class="card material-card property-card">
+                <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card-block">
+                    <h4 class="card-title">House name</h4>
+                    <p class="card-text">House description. <p>Status: <span class="avaliability">Free!</span></p></p>
+                    <a href="#" class="btn btn-primary">Start a ghetto pool to this pool</a>
+                </div>
+            </div>
+        </div>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
         <script src="js/ghetto.js"></script>
     </body>
 </html>
