fixed image style

--- a/secret/index.html
+++ b/secret/index.html
@@ -36,7 +36,7 @@
         </div>
         <div id="list-root">
             <div class="card material-card property-card">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="title.JPG" alt="Card image cap">
                 <div class="card-block">
                     <h4 class="card-title">House name</h4>
                     <p class="card-text">House description. <p>Status: <span class="avaliability">Free!</span></p></p>
