--- a/secret/index.html
+++ b/secret/index.html
@@ -26,7 +26,7 @@
         <div class="content-wrap">
             <img class="title" src="title.JPG"/>
             <h1>Find <i>free</i> pools near you</h1>
-            <form class="form-inline" method="GET">
+            <form id="get-form" class="form-inline" method="GET">
                 <div class="form-group">
                     <label for="postcodes">Postcode to splash in:</label>
                     <input type="postcodes" class="form-control" id="postcodes" name="postcodes">
@@ -46,6 +46,6 @@
         </div>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
-        <script src="js/ghetto.js"></script>
+        <script src="ghetto.js"></script>
     </body>
 </html>
