--- a/secret/index.html
+++ b/secret/index.html
@@ -10,7 +10,8 @@
         <link rel="manifest" href="site.webmanifest">
         <link rel="apple-touch-icon" href="icon.png">
         <!-- Place favicon.ico in the root directory -->
-
+        <title>pool.html</title>
+        <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
         <link rel="stylesheet" href="ghetto.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
